# LegalAnalyzer

./: .gitignore  README.md  pyproject.toml
src/legal_analyzer/: app.py  crew.py
src/legal_analyzer/config/: agents.yaml  tasks.yaml
src/legal_analyzer/rag/: ingestion_pipeline.py  retrieval_pipeline.py
src/legal_analyzer/tools/: __init__.py  mcp_tool.py  rag_tool.py
